This file records noteworthy changes.

1.2.4 (<date>)
* binomial(n, k) evaluates for non-integer arguments n.

1.2.3 (13 August 2004)
* Added variants of dirac_trace() and color_trace() that take the trace over
  more than one representation label by specifying a set or list of labels.
* diracgamma::contract_with() uses Chisholm identities in 4 dimensions to
  produce more compact results.
* Fixed a bug in the series expansion of powers.
* The --enable-html-doc and --enable-ps-doc configure options are gone.
  Documentation in HTML, DVI, PostScript, and PDF formats is now built with
  "make html", "make dvi", "make ps", and "make pdf", respectively. The only
  documentation that gets built by default are the tutorial in .info format
  and the manpages.

1.2.2 (3 August 2004)
* Added const_preorder_iterator and const_postorder_iterator classes (and
  associated methods ex::pre/postorder_begin/end()) providing tree traversal
  with iterators.
* Fixed the LaTeX output of the varidx class.
* Fixed bugs in series expansion and complex conjugation.
* (p.i*p.i).get_free_indices() returns the correct result () instead of (.i).
* Symbolic functions without any eval(), evalf() etc. functions now work
  properly.
* integer_content(), content(), and primpart() now also work for polynomials
  with rational coefficients (calculating the LCM of coefficients'
  denominators).
* Added method matrix::rank().
* Added function resultant().
* Added integer_content() function to ginsh.

1.2.1 (23 April 2004)
* Fixed infinite recursion in atan2_evalf() and improved atan2_eval().
* Added automatic evaluations for trigonometric functions with negative
  arguments (e.g. sin(-2) -> -sin(2)).
* Fixed a static initialization order goof-up.
* Fixed various bugs in series expansion.

1.2.0 (19 March 2004)
* Added a structure<T> template class for the easy creation of user-defined
  algebraic classes.
* Added support for (acyclic) visitors, to allow cleaner implementations of