@@ -133,6 +133,10 @@ static unsigned exam_series1()
 	d = log(a*x) + b/a*log(x)*x - pow(b/a, 2)/2*pow(log(x)*x, 2) + Order(pow(x, 3));
 	result += check_series(e, 0, d, 3);
 
+	e = pow((x+a), b);
+	d = pow(a, b) + (pow(a, b)*b/a)*x + (pow(a, b)*b*b/a/a/2 - pow(a, b)*b/a/a/2)*pow(x, 2) + Order(pow(x, 3));
+	result += check_series(e, 0, d, 3);
+
 	return result;
 }
 
