@@ -2,6 +2,7 @@ This file records noteworthy changes.
 
 1.2.4 (<date>)
 * binomial(n, k) evaluates for non-integer arguments n.
+* Fixed another bug in the series expansion of powers.
 
 1.2.3 (13 August 2004)
 * Added variants of dirac_trace() and color_trace() that take the trace over
